<resources>
    <string name="app_name">common-ui</string>

    <string name="load_ing">加载中...</string>
    <string name="load_fail">网络故障，请检查网络连接</string>
    <string name="load_retry">点击重试</string>
    <string name="load_more">加载更多</string>
    <string name="load_success">加载成功</string>
    <string name="load_empty">暂无内容</string>
    <string name="net_no_connected">请检查网络连接状态！</string>
    <string name="token_not_valid">登陆状态失效，请重新登录。</string>

    <string name="info_hint_no_input">未填写</string>
    <string name="info_hint_please_input">请填写</string>
    <string name="info_hint_select_avatar">请选择头像/...浏览</string>
    <string name="info_hint_no_select">未选择</string>
    <string name="info_hint_please_select">请选择</string>


    <string name="this_device_no_auth_login">您未购买该设备服务，请联系所在机构管理员</string>

    <string name="title">Title</string>
    <string name="reset">重置</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_close">关闭</string>
    <string name="dialog_count_change_title">修改购买数量</string>

    <string name="back">返回</string>
    <string name="next_step">下一步</string>
    <string name="prev_step">上一步</string>

    <string name="default_tts">具备多种情景主题对话、心理科普知识查询、心理视频推送等功能，为用户提供7*24小时全天候智能思想陪伴、情绪疏导、心理对话咨询、心理援助、心理干预服务，及时有效缓解用户在孤独、苦闷、压抑、敏感、焦虑、抑郁时的精神陪伴与疏导需求，保障身心愉悦，心态平和，队伍稳定。</string>


    <string name="bigText">天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n天和防务\n</string>
    <string name="bigText2">天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务天和防务</string>
    <string name="netText2">https://www.baidu.com/</string>
    <!--  登录相关-->
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="delete_account">注销账号</string>
    <string name="other_login_type">其他登录方式</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_by_password">账号密码登录</string>
    <string name="login_by_verification">免注册登录</string>
    <string name="use_login_by_verification">使用手机验证码登录</string>
    <string name="use_login_by_password">使用账号密码登录</string>
    <string name="gain_verification_code">发送验证码</string>
    <string name="verification_code_send_success">验证码成功发送至手机，请查收！</string>
    <string name="password_check_hint">6-12位的数字、字母组成(不能是纯数字)</string>
    <string name="please_input_mobile">请输入手机号/系统账号</string>
    <string name="please_input_mobile_only">请输入手机号</string>
    <string name="please_input_verification">请输入验证码</string>
    <string name="please_input_mobile_number11">请输入11位手机号！</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_repassword">再次输入新密码</string>
    <string name="login_agree">《用户协议隐私政策》</string>
    <string name="login_agree_hint">登录即代表您已同意</string>
    <string name="hint_bind_mobile">为了更好的为您服务 请您绑定手机号码</string>
    <string name="hint_login_by_password">使用账号密码登录提示：\n需要您手机验证码登录成功或微信登录成功后，修改登录密码，就可以用  手机号和密码 登录了 。</string>
    <string name="dialog_transaction_password">请输入交易密码</string>
    <string name="dialog_verification_code">请验证手机号码</string>
    <string name="dialog_purchase_goods">采购商品</string>
    <string name="dialog_purchase_goods_hint">让百万供应商为你报价</string>
    <string name="dialog_publish_goods">发布商品</string>
    <string name="dialog_publish_goods_hint">让千万供应商找到你</string>

    <string name="ask_more_what">猜你想问</string>
    <string name="ask_more_help">帮助说明</string>
    <string name="ask_more_clear">清除记录</string>

    <string name="name_wechat">微信</string>
    <string name="name_friend">朋友圈</string>
    <string name="name_qq">QQ</string>
    <string name="name_sina">微博</string>

    <string name="set_net">网络设置</string>
    <string name="set_volume">音量设置</string>
    <string name="set_light">亮度设置</string>
    <string name="set_blue">蓝牙设置</string>
    <string name="set_shutdown">定时关机</string>
    <string name="set_dormant">休眠设置</string>
    <string name="set_dormant_switch">自动休眠</string>
    <string name="set_speech">语音设置</string>
    <string name="set_speech_switch">语音包随心换</string>
    <string name="set_update">系统更新</string>

    <string name="set_volume_system">系统声音</string>
    <string name="set_volume_hint">提示声音</string>
    <string name="set_volume_music">媒体声音</string>
    <string name="set_voice_focus">语音和焦点</string>
    <string name="join_collect">加入收藏</string>
    <string name="set_volume_btn">按键声音</string>

    <string-array name="jokes">

        <item>早上闹钟开始发狂，被子突然抱住我，枕头给我唱安眠曲，然后我就睡着了。</item>
        <item>你认真起来的那一瞬间，真有点像路边贴膜的。</item>
        <item>为了当年你那句保重，这么多年我一向没瘦。</item>
        <item>好看的人一年四季都很酷，而你只有秋酷。</item>
        <item>你给我一个微笑，我也会还你一个微笑，也不是善意的招呼，只是让你知道：我笑起来比你好看。</item>
        <item>远处看到了一个帅哥，走近一看原来是一面镜子。</item>
        <!--        <item>我常在海边，却不喜欢海，而是喜欢浪。</item>-->
        <!--        <item>只暖一个女生的男生才叫暖男，暖所有女生的男生叫烧锅炉。</item>-->
        <item>挤公交是包含散打瑜珈柔道平衡木等多种体育和健身项目于一体的综合性运动。</item>
        <item>提问：为什么暑假必须比寒假长?回答：因为热胀冷缩。</item>
        <item>当一个人意识到一颗钻石比一颗玻璃球贵重的时候，这个人已经可悲的长大。</item>
        <item>天没降大任于我，照样苦我心志，劳我筋骨。</item>
        <item>其实我小时候并不胖，真的，一句“不许剩饭”毁了我的一生。</item>
        <item>护士看到一病人在病房喝酒，就走过去小声地对他说：“小心肝”！病人微笑着说：“小宝贝”。</item>
        <!--        <item>妹子：大哥什么叫禅?大哥：我这里有鸡腿你想吃吗?妹子：想。大哥：这就叫馋...</item>-->
        <!--        <item>都说在喜欢的人面前智商会变低，难道我爱上了数学老师，不能够啊?</item>-->
        <item>楼下溜狗，有个小女孩跑到狗狗面前，问我：“阿姨，可以摸一下狗狗吗？”我：“叫姐姐！ ”小女孩：“阿姨，可以摸一下姐姐吗？”</item>
        <!--        <item>以前我打王者荣耀打的不好，我朋友老骂我，后来我苦练了一个赛季，他骂不过我了。</item>-->
        <item>逛商场要走时门口保安喊我：“等一下，你衣服鼓鼓囊囊的装了什么？”我愤怒地掀起大衣吼：“是肉，是肉！我自己的。”</item>
        <!--        周焕提供-->
        <item>一个女人在早晨醒来后对丈夫说：“昨天晚上我梦见你送给我一条银项连作为我的生日礼物，你觉得这个梦意味着什么？”丈夫回答说：“今天晚上你就知道了。”当晚，丈夫回来给她带了一份包装好的礼物。这个女人非常高兴，打开盒子却发现是一本书——弗洛伊德的《梦的解析》。</item>
        <item>“你失眠的时候都在想什么呢？”\n“想睡觉啊”。</item>
        <item>一次和男朋友逛街，跟他说玩一个信任游戏，我闭上眼睛，他领着我走路。坚持了好久，一直顺利上了地铁。地铁上人很多，不过男朋友还是扶着我坐下了。然后，他附在我耳边小声说：“千万别睁眼，这个座位是别人让的……” </item>
        <item>某日，甲、乙两人相见......\n甲：我这学期选了一门叫“应用心理学”的课耶！\n乙：真的啊！那你现在应该可以说是心理学专家啰！快来帮我分析一下我的心理吧！\n甲：那还不行。\n乙：为什么？\n甲：因为我下学期才会选“变态心理学“这门课。</item>
        <item>巴甫洛夫一个人在酒吧喝酒，突然吧台上电话铃响了，他跳起来：“天哪！我忘了喂狗了！\n狗说：“看见没？只要铃一响，那货就喂我。”</item>
        <item>自从知道看一次心理医生需要花多少钱之后，我的心理问题就全好了。</item>
        <item>一天，小陈在公司被经理叫住\n经理：小陈，听说你大学读的是心理学是吧\n小陈：是的，经理，有什么事呢？\n经理：嗯，能不能帮我看看近期的运势如何？\n小陈：经理！我们心理学不是搞这些的！我们可是一门实验的科学，一门真正的科学……\n小陈：经理！你生辰八字是什么？给你算一算。</item>
        <item>甲：我曾经心理很痛苦。\n乙：哦，为什么啊？\n甲：我爱尿床。\n乙：……真不幸，那您现在好了吗\n甲：现在我好了\n乙：哦，真令人高兴，您是怎么好的？\n甲：我寻找了心理咨询师\n乙：是吗，他治好了尿床？\n甲：不，他告诉我，尿床是可以接受的</item>
    </string-array>

    <string name="surname">赵,钱,孙,李,周,吴,郑,王,冯,陈,褚,卫,蒋,沈,韩,杨,朱,秦,尤,许,何,
        吕,施,张,孔,曹,严,华,金,魏,陶,姜,戚,谢,邹,喻,柏,水,窦,章,云,苏,潘,葛,奚,范,彭,郎,鲁,
        韦,昌,马,苗,凤,花,方,俞,任,袁,柳,酆,鲍,史,唐,费,廉,岑,薛,雷,贺,倪,汤,滕,殷,罗,毕,郝,
        邬,安,常,乐,于,时,傅,皮,卞,齐,康,伍,余,元,卜,顾,孟,平,黄,和,穆,萧,尹,姚,邵,湛,汪,祁,
        毛,禹,狄,米,贝,明,臧,计,伏,成,戴,谈,宋,茅,庞,熊,纪,舒,屈,项,祝,董,梁,杜,阮,蓝,闵,席,
        季,麻,强,贾,路,娄,危,江,童,颜,郭,梅,盛,林,刁,钟,徐,邱,骆,高,夏,蔡,田,樊,胡,凌,霍,虞,
        万,支,柯,昝,管,卢,莫,经,房,裘,缪,干,解,应,宗,丁,宣,贲,邓,郁,单,杭,洪,包,诸,左,石,崔,
        吉,钮,龚,程,嵇,邢,滑,裴,陆,荣,翁,荀,羊,於,惠,甄,麴,家,封,芮,羿,储,靳,汲,邴,糜,松,井,
        段,富,巫,乌,焦,巴,弓,牧,隗,山,谷,车,侯,宓,蓬,全,郗,班,仰,秋,仲,伊,宫,宁,仇,栾,暴,甘,
        钭,厉,戎,祖,武,符,刘,景,詹,束,龙,叶,幸,司,韶,郜,黎,蓟,薄,印,宿,白,怀,蒲,邰,从,鄂,索,
        咸,籍,赖,卓,蔺,屠,蒙,池,乔,阴,欎,胥,能,苍,双,闻,莘,党,翟,谭,贡,劳,逄,姬,申,扶,堵,冉,
        宰,郦,雍,桑,桂,濮,牛,寿,通,边,扈,燕,冀,郏,浦,尚,农,温,别,庄,晏,柴,瞿,阎,充,慕,
        连,茹,习,宦,艾,鱼,容,向,古,易,慎,戈,廖,庾,终,暨,居,衡,步,耿,满,弘,匡,国,文,寇,广,
        禄,阙,东,殴,殳,沃,利,蔚,越,隆,师,巩,厍,聂,晁,勾,敖,融,冷,訾,辛,阚,那,简,饶,空,曾,
        毋,沙,养,鞠,须,丰,巢,关,相,查,後,荆,红,游,竺,权,逯,盖,益,桓,公,万俟,司马,上官,
        欧阳,夏侯,诸葛,闻人,东方,赫连,皇甫,尉迟,公羊,澹台,公冶,宗政,濮阳,淳于,单于,太叔,申屠,
        公孙,仲孙,轩辕,令狐,钟离,宇文,长孙,慕容,鲜于,闾丘,司徒,司空,亓官,司寇,仉,督,子车,颛孙,
        端木,巫马,公西,漆雕,乐正,壤驷,公良,拓跋,夹谷,宰父,谷梁,晋,楚,闫,法,汝,鄢,涂,钦,段干,
        百里,东郭,南门,呼延,梁丘,左丘,东门,西门,南宫,老</string>


    <string name="short_keyword">谢谢了_谢谢你了_谢谢啦_谢谢你啦_谢谢你_谢谢_别这样_平常心_平静如水_平凡_平静_水货_别来_师父_天哪_明天_
        明星_明白_明净_明年_明日_明快_明文_明日_商量_幸运_幸福_幸会_宣布_和和气气_和气_和谈_和他们_和我们_莫生气_莫哭
        商量一下_商议一下_商业_不行_帅哥_全死了_都有__等一等_我同意_还不错_还没_再见_闭嘴_安静点_振作起来_做得好_
        玩得开心_冀图_明白_多少钱_我饱了_我回来了_我迷路了_我请客_祝福你_祝福_祝好运_跟我来_保重_慢点_当心_干杯_干不了
        好久不见_不劳无获_占线_向未来_向往_向前看_向后看_向左看_向右看_老爷_老乡_老公_老人_白干了_白说了_白做了
        老婆_老年_老娘_老师_老人_老表_老者_熊孩子_高人_高中_高级_高低_高兴_高高兴兴_高压_高明_高校_高空</string>


</resources>
