<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_40"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/dialog_top_corner_background"
        android:orientation="horizontal"
        android:paddingTop="50dp"
        android:paddingBottom="50dp">


        <LinearLayout
            android:id="@+id/ll_dialog_purchase"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dialog_purchase"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/black_40" />

            <TextView
                android:id="@+id/tv_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_purchase_goods"
                android:textColor="@color/text_common" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_purchase_goods_hint" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_dialog_publish"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dialog_publish"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/black_40" />

            <TextView
                android:id="@+id/tv_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_publish_goods"
                android:textColor="@color/text_common" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_publish_goods_hint" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>