<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_top_corner_background"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="分享"
        android:textColor="@color/text_content"
        android:textSize="@dimen/textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/ll_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_share_wechat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/name_wechat"
                android:textSize="@dimen/textSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_share_friend" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/name_friend"
                android:textSize="@dimen/textSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_share_qq" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/name_qq"
                android:textColor="@color/text_content"
                android:textSize="@dimen/textSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_share_sina" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/name_sina"
                android:textColor="@color/text_content"
                android:textSize="@dimen/textSize" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_2px"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textColor="@color/text_common"
        android:textSize="@dimen/textSize_large" />


</LinearLayout>